any changes from the last class which weren't already added

--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -78,6 +78,14 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 input, button {color:black; border-radius: 4px;}
 
+#items {width: 100%; font-size: 18px;}
+
+#item-desc {}
+
+#items_index {width: 100%;}
+
+.item {width: 100%; margin: 4%;}
+
 .button {padding: 25px; float:left;}
 
 .table {clear:both;
