--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/index.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/index.html.erb
@@ -5,9 +5,9 @@
 
 <p class ="padding_bottom">
 <%= form_tag({controller: "loans", action: "index"}, method: "get", class: "form") do %>
-  <%= radio_button_tag :category, "borrowed", false, :onclick => "this.form.submit();" %>
+  <%= radio_button_tag :category, "borrowed", false, :onclick => "this.form.submit();", class: "btn btn-default" %>
 <%= label_tag(:category, "View Borrowed Items") %>
-<%= radio_button_tag :category, "loaned", false, :onclick => "this.form.submit();" %>
+<%= radio_button_tag :category, "loaned", false, :onclick => "this.form.submit();", class: "btn btn-default" %>
 <%= label_tag(:category, "View Loaned Items") %>
 <% end %>
  
