--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/new.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/loans/new.html.erb
@@ -12,7 +12,7 @@
 
 		Loan end Date & Time:
 		<%= f.datetime_select :loan_end , :ampm => true, :minute_step => 15  ,  :start_year => 2014, :default =>(DateTime.now + 3.days + 1.hour) %>
-		</div>
+		</dpiiv>
 		<div class ="button">
 	<%= f.submit %>
 	<% end %>
