--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -78,7 +78,7 @@ td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;
 
 input, button {color:black; border-radius: 4px;}
 
-#items {width: 100%; font-size: 18px;}
+#items, #my_items {width: 100%; font-size: 18px;}
 
 #item-desc {}
 
