--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/items.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/items.css.scss
@@ -5,4 +5,4 @@
 
 #pending_items { font-size: 20px; font-style: italic; display: inline-block; position:relative;}
 
-#my_items {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px !important;}
+/*#my_items, .listing {border: 0px solid black; font-family: "Futura", "Avenir Medium", "Calibri", "Consolas";}*/
