--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_my_items_listing.html.erb
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/views/items/_my_items_listing.html.erb
@@ -1,39 +1,39 @@
-<div id = "my_items" class = "listing large_text">
-	
-<% if @items.empty? %>
+<div id = "my_items" class = "listing">
 
-<h3>You haven't created any items yet.  <br><br><%= link_to "Create a new item ", new_item_path %>to earn points which will enable you to borrow things from other people!</h3>
+	<% if @items.empty? %>
 
-<% else %>
+	<h3>You haven't created any items yet.  <br><br><%= link_to "Create a new item ", new_item_path %>to earn points which will enable you to borrow things from other people!</h3>
 
-<h1>View items below or <%= link_to "Create a new item", new_item_path %><h2>
+	<% else %>
 
-<table id = "items">
-	<th>Item Name</th>
-	<th>Description</th>
-	<th>Image</th>
-	<th>Category</th>
-	<th>Condition</th>
-	<th>Approximate Value</th>
-	<th>Tags</th>
+	<h1>View items below or <%= link_to "Create a new item", new_item_path %></h1>
 
-<% @items.each do |item| %>
-	<% if item.available? %>
-	<tr>
-		<td><%= item.name %></td> 
-		<td><%= item.description %></td> 
-		<td><%= image_tag(item.image_path, size:"100", alt:item.name, class:"item") %></td> 
-		<td><%= item.category.name %></td> 
-		<td><%= item.condition_qual %></td> 
-		<td>$<%= item.value %></td> 
-		<td><%= item.tags %></td> 
-		<td><%= link_to "Edit Item", edit_item_path(item) %></td> 
-	
-	</tr>
+<!-- 	<div id = "my_items" class = "listing"> -->
+	<u><h1>My Items</h1></u>
+
+	<p>
+
+
+	<% @items.each do |item| %>
+		<% if item.available? %>
+			<div id ="item_<%= item.id %>" class ="item row">
+				<h1><%= item.name %></h1>
+				<div id ="image" class="col-md-3">
+				<%= image_tag(item.image_path, size:"200", alt:item.name, class:"image") %>
+				</div>
+				<div id ="item-desc" class="col-md-9">
+					Category: <%= item.category.name %> <br>
+					Item Description: <%= item.description %><br>
+					Condition: <%= item.condition_qual %> <br>
+					You can find this item here: <%= item.user.full_address %> <br>
+					Tags: <%= item.tags %> <br><br>
+					<h2 style="background-color: rgb(210, 210, 4); width: 240px;"><%= link_to "Request this item", new_item_loan_path(item.id) %></h2><br>
+					</div>
+				</div>
+			<% end %>
+		<% end %>
+
+		<!-- </div> -->
 	<% end %>
-<% end %>
-</table>
-
-<% end %>
 
 </div>
