--- a/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/app/assets/stylesheets/application.css.scss
@@ -22,11 +22,11 @@ body {background-color: #333;font-family: "Futura", "Avenir Medium", "Calibri", 
 
 a {color:white;}
 
-table, tr {border: 0px solid black; font-family: 'Helvetica-Light'; font-size: 14px;}
+table, tr {border: 0px solid white	; font-family: 'Helvetica-Light'; font-size: 14px;}
 
-th {padding: 20px; font-size: 14px; border: 2px solid black;}
+th {padding: 20px; font-size: 14px; border: 2px solid white;}
 
-td {padding:5px; font-size: 12px; border: 2px solid black; font-weight: lighter;}
+td {padding:5px; font-size: 12px; border: 2px solid white; font-weight: lighter;}
 
 .active {color: yellow; height: 100%;}
 
